UI fixes for login & sign up button on small screens(#113)

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -34,6 +34,9 @@
     left: 0;
     top: 0;
     z-index: -1;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
     img {
       width: 100%;
     }
