--- a/src/app/components/nav/header-static/header-static.component.scss
+++ b/src/app/components/nav/header-static/header-static.component.scss
@@ -208,6 +208,9 @@ header {
         display: block;
       }
     }
+    .btn {
+      margin-left:auto;
+    }
   }
 
   .navlinks {
